--- a/CrearRNC.ipynb
+++ b/CrearRNC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CrearRNC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMc0wykAJ5hb0m7sEJ1dzKF",
+      "authorship_tag": "ABX9TyPXX8YE5fkOUroS314H1oFi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.datasets import cifar10"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -68,12 +68,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d232f322-f085-4160-914b-2d36adf69a87"
+        "outputId": "1ea64685-9552-4ea4-df05-1415fd556f8d"
       },
       "source": [
         "tf.__version__"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +88,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -102,7 +102,7 @@
       "source": [
         "%matplotlib inline"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "#Configurar el nombre de las clases del dataset\n",
         "calss_names = [\"avion\", \"coche\", \"pájaro\", \"gato\", \"ciervo\", \"perro\", \"rana\", \"caballo\", \"barco\", \"camión\"]"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -144,14 +144,27 @@
       "metadata": {
         "id": "G-uqobaGQq3I",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "658ae673-7692-4bd5-936a-3510c2488ac0"
       },
       "source": [
         "#Cargar el dataset\n",
         "[X_train, y_train], [X_test, y_test] = cifar10.load_data()"
       ],
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+            "170500096/170498071 [==============================] - 4s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -173,7 +186,7 @@
       "source": [
         "X_train = X_train/255.0"
       ],
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -185,12 +198,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "749d18f2-2b77-4c7b-911c-6c374ae12fb8"
+        "outputId": "8119a5d4-46a8-4eb4-f1ef-0cead5c46088"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +215,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 7
         }
       ]
     },
@@ -216,7 +229,7 @@
       "source": [
         "X_test = X_test/255.0"
       ],
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -228,24 +241,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "beca23a0-9ba7-4f97-fba3-e5d8d727b364"
+        "outputId": "a4ea3c65-e11b-41cc-e4c8-26e6e7e1f3f8"
       },
       "source": [
         "plt.imshow(X_test[10])"
       ],
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f638a852240>"
+              "<matplotlib.image.AxesImage at 0x7fba95245320>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -271,12 +284,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "db10867f-6fe9-4df4-de2a-646aaa72cd49"
+        "outputId": "f2bdf619-5f3f-4d52-f748-1a9e3944ee62"
       },
       "source": [
         "y_test[10]"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 10
         }
       ]
     },
@@ -322,7 +335,7 @@
       "source": [
         "modelo = tf.keras.models.Sequential()"
       ],
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -351,7 +364,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Conv2D(filters=32, kernel_size=3, padding=\"same\", activation=\"relu\", input_shape=(32, 32, 3)))"
       ],
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -364,7 +377,7 @@
       "source": [
         "modelo.add(tf.keras.layers.BatchNormalization())"
       ],
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -398,7 +411,7 @@
         "modelo.add(tf.keras.layers.Conv2D(filters=64, kernel_size=3, padding=\"same\", activation=\"relu\", input_shape=(32, 32, 3)))\n",
         "modelo.add(tf.keras.layers.MaxPool2D(pool_size=2, strides=2, padding=\"same\"))"
       ],
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -412,7 +425,7 @@
         "modelo.add(tf.keras.layers.Dropout(0.2))\n",
         "modelo.add(tf.keras.layers.BatchNormalization())"
       ],
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -441,7 +454,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Conv2D(filters=32, kernel_size=3, padding=\"same\", activation=\"relu\", input_shape=(32, 32, 3)))"
       ],
-      "execution_count": 29,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -454,7 +467,7 @@
       "source": [
         "modelo.add(tf.keras.layers.BatchNormalization())"
       ],
-      "execution_count": 30,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -490,7 +503,7 @@
         "modelo.add(tf.keras.layers.Dropout(0.2))\n",
         "modelo.add(tf.keras.layers.BatchNormalization())"
       ],
-      "execution_count": 31,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -513,7 +526,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Flatten())"
       ],
-      "execution_count": 33,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -539,7 +552,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Dense(units=128, activation=\"relu\"))"
       ],
-      "execution_count": 35,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -553,7 +566,7 @@
         "modelo.add(tf.keras.layers.Dropout(0.2))\n",
         "modelo.add(tf.keras.layers.BatchNormalization())"
       ],
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -566,7 +579,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Dense(units=256, activation=\"relu\"))"
       ],
-      "execution_count": 37,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -589,7 +602,7 @@
       "source": [
         "modelo.add(tf.keras.layers.Dense(units=10, activation=\"softmax\"))"
       ],
-      "execution_count": 38,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -599,14 +612,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 765
+          "height": 756
         },
-        "outputId": "86fbd1a1-2ab4-4427-bdb2-86575afa0790"
+        "outputId": "c092d17e-0de7-4f38-e2c9-957b000dddf5"
       },
       "source": [
         "modelo.summary()"
       ],
-      "execution_count": 39,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,6 +670,81 @@
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KRnih6PNvzbh",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### **Compilar el modelo**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D058lx1wuxEo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_optim = tf.keras.optimizers.Adam(learning_rate=0.0005)"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IOl-gNQGvS5B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "modelo.compile(optimizer=my_optim, loss=\"sparse_categorical_crossentropy\", metrics=\"sparse_categorical_accuracy\")"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xE1QkohhDpgM",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Paso 4: Entrenar el modelo**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OfjJgq6kDyiS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "outputId": "e8da3771-9cd4-4f5d-e7be-d3251665a923"
+      },
+      "source": [
+        "modelo.fit(X_train, y_train, batch_size=1000, epochs=100)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-1c3b6ef95b5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodelo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'modelo' is not defined"
+          ]
         }
       ]
     }
