--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TFG.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN0rFp/w3PzEfc9ELhSolnI",
+      "authorship_tag": "ABX9TyOyjScRgzPyfmxa3eexonw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -72,14 +72,26 @@
       "metadata": {
         "id": "Z06ryLWDlCoo",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d28e5a49-da35-4cf3-a392-1db3843a7df0"
       },
       "source": [
         "drive.mount(\"/content/drive\")\n",
         "base_dir = \"./drive/My Drive/object_photos\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,7 +108,7 @@
         "    rescale=1./255, \n",
         "    validation_split=0.2)\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -104,7 +116,11 @@
       "metadata": {
         "id": "6yVvxCvxuu4e",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "349d718b-4773-48ae-9e1c-990ec23beff2"
       },
       "source": [
         "train_generator = datagen.flow_from_directory(\n",
@@ -113,15 +129,27 @@
         "    batch_size=BATCH_SIZE, \n",
         "    subset='training')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 22620 images belonging to 40 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jTPH2N3_uwi_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d6ba28b-bca0-4305-edae-aaef78117365"
       },
       "source": [
         "val_generator = datagen.flow_from_directory(\n",
@@ -130,20 +158,172 @@
         "    batch_size=BATCH_SIZE, \n",
         "    subset='validation')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 5659 images belonging to 40 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SsEOuak5u1pC",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d33a36fa-7053-4fa4-d0c7-454c1249d34f"
       },
       "source": [
         "for image_batch, label_batch in train_generator:\n",
         "  break\n",
         "image_batch.shape, label_batch.shape"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((64, 224, 224, 3), (64, 40))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sNtajZB5XJqp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **Generamos el archivo labels con las etiquetas de los objetos**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IHYustr0XCZp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "a82ad8ba-2336-43d7-c2e4-0ab07561a1a6"
+      },
+      "source": [
+        "print (train_generator.class_indices)\n",
+        "\n",
+        "labels = '\\n'.join(sorted(train_generator.class_indices.keys()))\n",
+        "\n",
+        "with open('labels.txt', 'w') as f:\n",
+        "  f.write(labels)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'backpack': 0, 'bed': 1, 'belt': 2, 'blind stick': 3, 'bottle': 4, 'carpet': 5, 'cellular phone': 6, 'chair': 7, 'cup-glass': 8, 'door': 9, 'eyeglasses': 10, 'fan': 11, 'handkerchief': 12, 'headphones': 13, 'keys': 14, 'laptop': 15, 'mouse': 16, 'newspaper': 17, 'notebook': 18, 'pen': 19, 'pencil': 20, 'pillow': 21, 'plate': 22, 'plug': 23, 'printer': 24, 'radiator': 25, 'remote control': 26, 'shoes': 27, 'shorts': 28, 'socks': 29, 't-shirt': 30, 'table': 31, 'television': 32, 'toothbrush': 33, 'towel': 34, 'trash bin': 35, 'wallet': 36, 'wardrobe': 37, 'watch': 38, 'window (shade)': 39}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ei7YAb_XGB1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 697
+        },
+        "outputId": "0b2303b8-a277-471f-fb27-373e1ca4c889"
+      },
+      "source": [
+        "!cat labels.txt"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "backpack\n",
+            "bed\n",
+            "belt\n",
+            "blind stick\n",
+            "bottle\n",
+            "carpet\n",
+            "cellular phone\n",
+            "chair\n",
+            "cup-glass\n",
+            "door\n",
+            "eyeglasses\n",
+            "fan\n",
+            "handkerchief\n",
+            "headphones\n",
+            "keys\n",
+            "laptop\n",
+            "mouse\n",
+            "newspaper\n",
+            "notebook\n",
+            "pen\n",
+            "pencil\n",
+            "pillow\n",
+            "plate\n",
+            "plug\n",
+            "printer\n",
+            "radiator\n",
+            "remote control\n",
+            "shoes\n",
+            "shorts\n",
+            "socks\n",
+            "t-shirt\n",
+            "table\n",
+            "television\n",
+            "toothbrush\n",
+            "towel\n",
+            "trash bin\n",
+            "wallet\n",
+            "wardrobe\n",
+            "watch\n",
+            "window (shade)"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5kY07UNKXTmd",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **Paso 3: Crear el modelo base ya entrenado**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pvRql3bEXb1C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
