--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "TFG.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyjScRgzPyfmxa3eexonw7",
+      "toc_visible": true,
+      "mount_file_id": "https://github.com/Android998/TensorFlow2.3/blob/master/TFG.ipynb",
+      "authorship_tag": "ABX9TyPL4hUuKP0D92B9XoLIaXpF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +29,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f5Vt5BoZk8b-",
-        "colab_type": "text"
+        "id": "f5Vt5BoZk8b-"
       },
       "source": [
         "## **Paso 1: Importar las librerias**"
@@ -37,9 +38,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wDhZ260AcDBb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wDhZ260AcDBb"
       },
       "source": [
         "import os\n",
@@ -54,14 +53,13 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8YSbqpAelDtV",
-        "colab_type": "text"
+        "id": "8YSbqpAelDtV"
       },
       "source": [
         "## **Paso 2:Pre procesado de datos**"
@@ -71,23 +69,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "Z06ryLWDlCoo",
-        "colab_type": "code",
+        "outputId": "e780c156-20ba-4b25-b695-7d69e68e0659",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d28e5a49-da35-4cf3-a392-1db3843a7df0"
+        }
       },
       "source": [
         "drive.mount(\"/content/drive\")\n",
         "base_dir = \"./drive/My Drive/object_photos\""
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -96,9 +93,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6PXrwXPQum-A",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6PXrwXPQum-A"
       },
       "source": [
         "IMAGE_SIZE = 224\n",
@@ -108,19 +103,18 @@
         "    rescale=1./255, \n",
         "    validation_split=0.2)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6yVvxCvxuu4e",
-        "colab_type": "code",
+        "outputId": "d7edbe4e-9ce1-4f68-b37e-bd6416691301",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "349d718b-4773-48ae-9e1c-990ec23beff2"
+        }
       },
       "source": [
         "train_generator = datagen.flow_from_directory(\n",
@@ -129,12 +123,12 @@
         "    batch_size=BATCH_SIZE, \n",
         "    subset='training')"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 22620 images belonging to 40 classes.\n"
+            "Found 38681 images belonging to 40 classes.\n"
           ],
           "name": "stdout"
         }
@@ -144,12 +138,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "jTPH2N3_uwi_",
-        "colab_type": "code",
+        "outputId": "b47f0edf-6a69-42c6-bdcf-c3fd16b7b6a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7d6ba28b-bca0-4305-edae-aaef78117365"
+        }
       },
       "source": [
         "val_generator = datagen.flow_from_directory(\n",
@@ -158,12 +151,12 @@
         "    batch_size=BATCH_SIZE, \n",
         "    subset='validation')"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 5659 images belonging to 40 classes.\n"
+            "Found 9652 images belonging to 40 classes.\n"
           ],
           "name": "stdout"
         }
@@ -173,19 +166,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "SsEOuak5u1pC",
-        "colab_type": "code",
+        "outputId": "a97f18ae-6939-4ad8-a84a-8dc96c19f475",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d33a36fa-7053-4fa4-d0c7-454c1249d34f"
+        }
       },
       "source": [
         "for image_batch, label_batch in train_generator:\n",
         "  break\n",
         "image_batch.shape, label_batch.shape"
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,15 +189,14 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sNtajZB5XJqp",
-        "colab_type": "text"
+        "id": "sNtajZB5XJqp"
       },
       "source": [
         "### **Generamos el archivo labels con las etiquetas de los objetos**"
@@ -215,12 +206,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "IHYustr0XCZp",
-        "colab_type": "code",
+        "outputId": "a0c47095-95d2-468f-e5b6-062f41c4705b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "a82ad8ba-2336-43d7-c2e4-0ab07561a1a6"
+        }
       },
       "source": [
         "print (train_generator.class_indices)\n",
@@ -230,7 +220,7 @@
         "with open('labels.txt', 'w') as f:\n",
         "  f.write(labels)"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,17 +235,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "3ei7YAb_XGB1",
-        "colab_type": "code",
+        "outputId": "fafcf9bf-d7dd-428b-e231-758f953c7d36",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 697
-        },
-        "outputId": "0b2303b8-a277-471f-fb27-373e1ca4c889"
+          "height": 689
+        }
       },
       "source": [
         "!cat labels.txt"
       ],
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,8 +297,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5kY07UNKXTmd",
-        "colab_type": "text"
+        "id": "5kY07UNKXTmd"
       },
       "source": [
         "## **Paso 3: Crear el modelo base ya entrenado**"
@@ -318,9 +306,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pvRql3bEXb1C",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pvRql3bEXb1C"
       },
       "source": [
         ""
